# serializer version: 1
# name: test_get_cancer_studies_snapshot
  dict({
    'pagination': dict({
      'has_more': True,
      'page': 0,
      'page_size': 2,
      'total_found': 2,
    }),
    'studies': list([
      dict({
        'allSampleCount': 93,
        'cancerTypeId': 'bll',
        'citation': 'Andersson et al. Nat Genet 2015',
        'description': 'Comprehensive profiling of infant MLL-rearranged acute lymphoblastic leukemia (MLL-R ALL)',
        'groups': 'PUBLIC',
        'importDate': '2024-12-03 11:48:34',
        'name': 'Acute Lymphoblastic Leukemia (St Jude, Nat Genet 2015)',
        'pmid': '25730765',
        'publicStudy': True,
        'readPermission': True,
        'referenceGenome': 'hg19',
        'status': 0,
        'studyId': 'all_stjude_2015',
      }),
      dict({
        'allSampleCount': 44,
        'cancerTypeId': 'myeloid',
        'citation': 'Holmfeldt et al. Nat Genet 2013',
        'description': 'Whole genome or exome sequencing of 44 (20 whole genome, 20 exome) ALL tumor/normal pairs.',
        'groups': '',
        'importDate': '2024-12-03 11:50:01',
        'name': 'Hypodiploid Acute Lymphoid Leukemia (St Jude, Nat Genet 2013)',
        'pmid': '23334668',
        'publicStudy': True,
        'readPermission': True,
        'referenceGenome': 'hg19',
        'status': 0,
        'studyId': 'all_stjude_2013',
      }),
    ]),
  })
# ---
# name: test_get_cancer_types_snapshot
  dict({
    'cancer_types': list([
      dict({
        'cancerTypeId': 'aa',
        'dedicatedColor': 'LightYellow',
        'name': 'Aggressive Angiomyxoma',
        'parent': 'soft_tissue',
        'shortName': 'AA',
      }),
      dict({
        'cancerTypeId': 'aastr',
        'dedicatedColor': 'Gray',
        'name': 'Anaplastic Astrocytoma',
        'parent': 'difg',
        'shortName': 'AASTR',
      }),
    ]),
    'pagination': dict({
      'has_more': True,
      'page': 0,
      'page_size': 2,
      'total_found': 2,
    }),
  })
# ---
# name: test_get_clinical_data_snapshot
  dict({
    'clinical_data_by_patient': dict({
      'TCGA-OR-A5J1': dict({
        'AGE': '50',
        'SEX': 'Female',
      }),
      'TCGA-OR-A5J2': dict({
        'AGE': '65',
        'SEX': 'Male',
      }),
      'TCGA-OR-A5J3': dict({
        'AJCC_PATHOLOGIC_TUMOR_STAGE': 'STAGE I',
      }),
    }),
    'pagination': dict({
      'has_more': False,
      'page': 0,
      'page_size': 50,
      'total_found': 3,
    }),
  })
# ---
# name: test_get_clinical_data_specific_attributes_snapshot
  dict({
    'clinical_data_by_patient': dict({
      'TCGA-OR-A5J1': dict({
        'AGE': '50',
        'SEX': 'Female',
      }),
      'TCGA-OR-A5J2': dict({
        'AGE': '65',
        'SEX': 'Male',
      }),
    }),
    'pagination': dict({
      'has_more': False,
      'page': 0,
      'page_size': 50,
      'total_found': 2,
    }),
  })
# ---
# name: test_get_gene_panel_details_snapshot
  dict({
    'description': '468 key cancer genes',
    'genePanelId': 'IMPACT468',
    'genes': list([
      dict({
        'entrezGeneId': 7157,
        'hugoGeneSymbol': 'TP53',
      }),
      dict({
        'entrezGeneId': 207,
        'hugoGeneSymbol': 'AKT1',
      }),
      dict({
        'entrezGeneId': 595,
        'hugoGeneSymbol': 'CCND1',
      }),
    ]),
    'name': 'MSK-IMPACT Clinical Sequencing Cohort (MSK, Cancer Cell 2015)',
  })
# ---
# name: test_get_gene_panels_for_study_snapshot
  list([
    dict({
      'description': '341 cancer-associated genes',
      'genePanelId': 'IMPACT341',
      'genes': list([
        dict({
          'entrezGeneId': 1,
          'hugoGeneSymbol': 'GENE1',
        }),
        dict({
          'entrezGeneId': 2,
          'hugoGeneSymbol': 'GENE2',
        }),
      ]),
      'name': 'MSK-IMPACT Clinical Sequencing Cohort (MSK, Nat Med 2017)',
    }),
    dict({
      'description': 'Pediatric panel of genes',
      'genePanelId': 'PEDS-IMPACT',
      'genes': list([
        dict({
          'entrezGeneId': 3,
          'hugoGeneSymbol': 'GENE3',
        }),
        dict({
          'entrezGeneId': 4,
          'hugoGeneSymbol': 'P53_MUTANT',
        }),
      ]),
      'name': 'MSK-IMPACT Pediatric Panel',
    }),
  ])
# ---
# name: test_get_molecular_profiles_snapshot
  dict({
    'molecular_profiles': list([
      dict({
        'datatype': 'LOG2-VALUE',
        'description': 'Protein expression measured by reverse-phase protein array',
        'molecularAlterationType': 'PROTEIN_LEVEL',
        'molecularProfileId': 'acc_tcga_rppa',
        'name': 'Protein expression (RPPA)',
        'patientLevel': False,
        'showProfileInAnalysisTab': False,
        'studyId': 'acc_tcga',
      }),
      dict({
        'datatype': 'Z-SCORE',
        'description': 'Protein expression, measured by reverse-phase protein array, z-scores',
        'molecularAlterationType': 'PROTEIN_LEVEL',
        'molecularProfileId': 'acc_tcga_rppa_Zscores',
        'name': 'Protein expression z-scores (RPPA)',
        'patientLevel': False,
        'showProfileInAnalysisTab': True,
        'studyId': 'acc_tcga',
      }),
    ]),
    'pagination': dict({
      'has_more': True,
      'page': 0,
      'page_size': 2,
      'total_found': 9,
    }),
  })
# ---
# name: test_get_mutations_in_gene_snapshot
  dict({
    'mutations': list([
      dict({
        'aminoAcidChange': 'R248W',
        'chromosome': '17',
        'endPosition': 7577538,
        'entrezGeneId': 7157,
        'hugoGeneSymbol': 'TP53',
        'keyword': 'TP53 Missense_Mutation R248W',
        'molecularProfileId': 'acc_tcga_mutations',
        'mutationStatus': 'SOMATIC',
        'mutationType': 'Missense_Mutation',
        'patientId': 'TCGA-OR-A5J1',
        'proteinPosEnd': 248,
        'proteinPosStart': 248,
        'referenceAllele': 'C',
        'sampleId': 'TCGA-OR-A5J1-01',
        'startPosition': 7577538,
        'uniquePatientKey': 'TCGA-OR-A5J1:acc_tcga_mutations',
        'uniqueSampleKey': 'TCGA-OR-A5J1-01:acc_tcga_mutations',
        'variantAllele': 'T',
      }),
      dict({
        'aminoAcidChange': 'Q136*',
        'chromosome': '17',
        'endPosition': 7578459,
        'entrezGeneId': 7157,
        'hugoGeneSymbol': 'TP53',
        'keyword': 'TP53 Nonsense_Mutation Q136*',
        'molecularProfileId': 'acc_tcga_mutations',
        'mutationStatus': 'SOMATIC',
        'mutationType': 'Nonsense_Mutation',
        'patientId': 'TCGA-OR-A5J2',
        'proteinPosEnd': 136,
        'proteinPosStart': 136,
        'referenceAllele': 'C',
        'sampleId': 'TCGA-OR-A5J2-01',
        'startPosition': 7578459,
        'uniquePatientKey': 'TCGA-OR-A5J2:acc_tcga_mutations',
        'uniqueSampleKey': 'TCGA-OR-A5J2-01:acc_tcga_mutations',
        'variantAllele': 'T',
      }),
    ]),
    'pagination': dict({
      'has_more': False,
      'page': 0,
      'page_size': 50,
      'total_found': 2,
    }),
  })
# ---
# name: test_get_samples_in_study_snapshot
  dict({
    'pagination': dict({
      'has_more': True,
      'page': 0,
      'page_size': 2,
      'total_found': 2,
    }),
    'samples': list([
      dict({
        'patientId': 'TCGA-OR-A5J1',
        'sampleId': 'TCGA-OR-A5J1-01',
        'sampleType': 'Primary Solid Tumor',
        'studyId': 'acc_tcga',
        'uniquePatientKey': 'VENHQS1PUi1BNUoxOmFjY190Y2dh',
        'uniqueSampleKey': 'VENHQS1PUi1BNUoxLTAxOmFjY190Y2dh',
      }),
      dict({
        'patientId': 'TCGA-OR-A5J2',
        'sampleId': 'TCGA-OR-A5J2-01',
        'sampleType': 'Primary Solid Tumor',
        'studyId': 'acc_tcga',
        'uniquePatientKey': 'VENHQS1PUi1BNUoyOmFjY190Y2dh',
        'uniqueSampleKey': 'VENHQS1PUi1BNUoyLTAxOmFjY190Y2dh',
      }),
    ]),
  })
# ---
# name: test_get_study_details_snapshot
  dict({
    'study': dict({
      'allSampleCount': 92,
      'cancerType': dict({
        'cancerTypeId': 'acc',
        'dedicatedColor': 'LightGreen',
        'name': 'Adrenocortical Carcinoma',
        'parentCancerTypeId': 'adrenal_gland',
        'shortName': 'ACC',
      }),
      'cancerTypeId': 'acc',
      'citation': 'Cancer Genome Atlas Research Network. (2018). The Immune Landscape of Cancer. Immunity, 48(4).',
      'cnaSampleCount': 90,
      'description': 'TCGA PanCanAtlas ACC',
      'groups': 'PANCANCER;PANCAN',
      'importDate': '2018-04-10 00:00:00',
      'massSpectrometrySampleCount': 0,
      'methylationHm27SampleCount': 0,
      'miRnaSampleCount': 0,
      'mrnaMicroarraySampleCount': 0,
      'mrnaRnaSeqSampleCount': 79,
      'mrnaRnaSeqV2SampleCount': 0,
      'name': 'Adrenocortical Carcinoma (TCGA, PanCancer Atlas)',
      'numberOfSamplesWithCompleteSampleData': 90,
      'pmid': '29622464',
      'publicStudy': True,
      'readPermission': True,
      'referenceGenome': 'hg19',
      'rppaSampleCount': 0,
      'sequencedSampleCount': 90,
      'status': 0,
      'studyId': 'acc_tcga',
      'svSampleCount': 0,
    }),
  })
# ---
# name: test_search_genes_snapshot
  dict({
    'genes': list([
      dict({
        'entrezGeneId': 394269,
        'hugoGeneSymbol': 'BRCA1P1',
        'type': 'pseudogene',
      }),
      dict({
        'entrezGeneId': 672,
        'hugoGeneSymbol': 'BRCA1',
        'type': 'protein-coding',
      }),
    ]),
    'pagination': dict({
      'has_more': True,
      'page': 0,
      'page_size': 2,
      'total_found': 2,
    }),
  })
# ---
# name: test_search_studies_snapshot
  dict({
    'pagination': dict({
      'has_more': True,
      'page': 0,
      'page_size': 2,
      'total_found': 32,
    }),
    'studies': list([
      dict({
        'allSampleCount': 411,
        'cancerTypeId': 'blca',
        'citation': 'TCGA, Cell 2018',
        'description': 'Bladder Urothelial Carcinoma TCGA PanCancer data. The original data is <a href="https://gdc.cancer.gov/about-data/publications/pancanatlas">here</a>. The publications are <a href="https://www.cell.com/pb-assets/consortium/pancanceratlas/pancani3/index.html">here</a>.',
        'groups': 'PUBLIC;PANCAN',
        'importDate': '2024-12-19 18:07:22',
        'name': 'Bladder Urothelial Carcinoma (TCGA, PanCancer Atlas)',
        'pmid': '29625048,29596782,29622463,29617662,29625055,29625050,29617662,32214244,29625049,29850653,36334560',
        'publicStudy': True,
        'readPermission': True,
        'referenceGenome': 'hg19',
        'status': 0,
        'studyId': 'blca_tcga_pan_can_atlas_2018',
      }),
      dict({
        'allSampleCount': 1084,
        'cancerTypeId': 'brca',
        'citation': 'TCGA, Cell 2018',
        'description': 'Breast Invasive Carcinoma TCGA PanCancer data. The original data is <a href="https://gdc.cancer.gov/about-data/publications/pancanatlas">here</a>. The publications are <a href="https://www.cell.com/pb-assets/consortium/pancanceratlas/pancani3/index.html">here</a>.',
        'groups': 'PUBLIC;PANCAN',
        'importDate': '2024-12-20 06:03:20',
        'name': 'Breast Invasive Carcinoma (TCGA, PanCancer Atlas)',
        'pmid': '29625048,29596782,29622463,29617662,29625055,29625050,29617662,30643250,32214244,29625049,29850653,36334560',
        'publicStudy': True,
        'readPermission': True,
        'referenceGenome': 'hg19',
        'status': 0,
        'studyId': 'brca_tcga_pan_can_atlas_2018',
      }),
    ]),
  })
# ---
